terraform/network.tf
resource "aws_internet_gateway" "prod-igw" {
    vpc_id = "${aws_vpc.prod-vpc.id}"
    tags = {
        Name = "prod-igw"
    }
}

resource "aws_route_table" "prod-public-crt" {
    vpc_id = "${aws_vpc.prod-vpc.id}"

    route {
        //associated subnet can reach everywhere
        cidr_block = "0.0.0.0/0"         //CRT uses this IGW to reach internet
        gateway_id = "${aws_internet_gateway.prod-igw.id}"
    }

    tags = {
        Name = "Eng67.Ibrahim.Public.RT.Terraform"
    }
}

resource "aws_route_table" "prod-private-crt" {
    vpc_id = "${aws_vpc.prod-vpc.id}"

    route {
        //associated subnet can reach everywhere
        cidr_block = "121.12.10.0/24"         //CRT uses this this to only allow connection from the public subnet
        gateway_id = "${aws_internet_gateway.prod-igw.id}"

    }

    tags = {
        Name = "Eng67.Ibrahim.Private.RT.Terraform"
    }
}




resource "aws_route_table_association" "prod-crta-public-subnet"{
    subnet_id = "${aws_subnet.public-subnet.id}"
    route_table_id = "${aws_route_table.prod-public-crt.id}"
}

resource "aws_route_table_association" "prod-crta-private-subnet"{
    subnet_id = "${aws_subnet.private-subnet.id}"
    route_table_id = "${aws_route_table.prod-private-crt.id}"
}
